--- a/store/emails/customer-welcome.html
+++ b/store/emails/customer-welcome.html
@@ -4,6 +4,8 @@ Dear <strong>{CUSTOMER}</strong>,
 Please activate your customer account.<br />
 {ACTIVATION_LINK}<br/>
 <br/>
+Your password is: <strong>{PASSWORD}</strong><br/>
+<br/>
 Then, you will be able to login and post your ideas.<br/>
 Thank you for choosing us as your software developer.<br/>
 <br/>
