--- a/store/emails/customer-project-uploaded.html
+++ b/store/emails/customer-project-uploaded.html
@@ -3,5 +3,7 @@ Dear {CUSTOMER},<br/>
 Your project has been added to the estimation queue.<br/>
 <strong>{PROJECT}</strong><br/>
 <br/>
+You will soon receive another email with a free quotation.<br/>
+<br/>
 Regards,<br/>
 {COMPANY} Team
