--- a/store/emails/payment-received.html
+++ b/store/emails/payment-received.html
@@ -1,6 +1,7 @@
-Dear {CUSTOMER},
-Your project is terminated.
-{PROJECT}
-
-Regards,
+Dear {CUSTOMER},<br />
+Your payment is received.<br />
+{PROJECT}<br />
+{BUDGET}<br />
+<br />
+Regards,<br />
 {COMPANY} Team
