--- a/store/emails/project-terminated.html
+++ b/store/emails/project-terminated.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Project Terminated</title>
 </head>
 <body>
-$END$
+<p>Dear {CUSTOMER},</p>
+<p>Your project is terminated.</p>
+<p>{PROJECT}</p>
+<p>Regards</p>
+<p>{COMPANY} Team</p>
 </body>
 </html>
