--- a/store/emails/payment-received.html
+++ b/store/emails/payment-received.html
@@ -1,7 +1,7 @@
 Dear {CUSTOMER},<br />
 Your payment is received.<br />
-{PROJECT}<br />
-{BUDGET}<br />
+<strong>{PROJECT}</strong><br />
+Amount: ${BUDGET}<br />
 <br />
 Regards,<br />
 {COMPANY} Team
