--- a/store/emails/customer-welcome.html
+++ b/store/emails/customer-welcome.html
@@ -2,10 +2,14 @@ Dear <strong>{CUSTOMER}</strong>,
 <br/>
 <br/>
 Please activate your customer account.<br />
-{ACTIVATION_LINK}<br/>
+<a href="{ACTIVATION_LINK}">Click this link to activate your account</a>.<br/>
+<br/>
+Activation Link:<br/>
+<strong>{ACTIVATION_LINK}</strong><br/>
 <br/>
 By clicking the link above, you will activate your account with us.<br/>
 <br/>
+Your email address is: <strong>{EMAIL}</strong><br/>
 Your password is: <strong>{PASSWORD}</strong><br/>
 <br/>
 Then, you will be able to login and post your ideas.<br/>
