--- a/store/emails/customer-project-payment-ask.html
+++ b/store/emails/customer-project-payment-ask.html
@@ -3,7 +3,7 @@ Dear {CUSTOMER},<br />
 Your project <strong>{PROJECT}</strong><br />
 has been estimated.<br />
 <br />
-Please make a payment of ${BUDGET}.<br />
+Please make a payment of ${BUDGET} for this installment.<br />
 <br />
 You can login at below link to make a payment.<br />
 {WEBSITE}/project.php?id={PROJECTID}<br />
