--- a/store/emails/customer-project-uploaded.html
+++ b/store/emails/customer-project-uploaded.html
@@ -4,6 +4,20 @@ Your project has been added to the estimation queue.<br/>
 <strong>{PROJECT}</strong><br/>
 <br/>
 You will soon receive another email with a free quotation.<br/>
+Please note that it is a manual process and may take a little time.<br/>
+<br/>
+Our project manager will review your uploads.<br/>
+If you would still want to supply additional files,<br/>
+please login into customer area and re-upload.<br/>
+<br/>
+Estimation Process:<br/>
+Your first estimation is always a small amount to set the project go into development.<br/>
+To complete a project, your estimations will be done in installments of small amounts.<br/>
+<br/>
+We hope, you will cooperate with the payment after your project gets estimated.<br/>
+<br/>
+We value your project.<br/>
+Thank you for choosing us as your software development partner.<br/>
 <br/>
 Regards,<br/>
 {COMPANY} Team
