--- a/store/emails/customer-project-uploaded.html
+++ b/store/emails/customer-project-uploaded.html
@@ -10,7 +10,7 @@ Our project manager will review your uploads.<br/>
 If you would still want to supply additional files,<br/>
 please login into customer area and re-upload.<br/>
 <br/>
-Estimation Process:<br/>
+<strong>Estimation Process:</strong><br/>
 Your first estimation is always a small amount to set the project go into development.<br/>
 To complete a project, your estimations will be done in installments of small amounts.<br/>
 <br/>
