--- a/store/emails/project-terminated.html
+++ b/store/emails/project-terminated.html
@@ -1,5 +1,6 @@
 <p>Dear {CUSTOMER},</p>
 <p>Your project is terminated.</p>
 <p>{PROJECT}</p>
+<p>If you think, this happened in an error, please promptly notify your project manager.</p>
 <p>Regards</p>
 <p>{COMPANY} Team</p>
